# cagliostro

./: CMakeLists.txt  README.md  resources.rc.in
.github/workflows/: testing.yml
cagliostro/: Tests.cpp  Tests.h  main.cpp  main_crypto.cpp
cagliostro/model/: Config.cpp  Config.h  Entity.cpp  Entity.h  Page.cpp  Page.h  Question.cpp  Question.h  Responses.cpp  Responses.h  Selection.cpp  Selection.h  Source.cpp  Source.h  Wizard.cpp  Wizard.h
cagliostro/model/content/: Content.cpp  Content.h  Resource.cpp  Resource.h  Video.cpp  Video.h
cagliostro/model/content/postprocessors/: Delete.cpp  Delete.h
cagliostro/model/content/preprocessors/: Header.cpp  Header.h  header.py
cagliostro/model/content/util/: VideoDecoder.cpp  VideoDecoder.h
cagliostro/view/: ConfigPage.cpp  ConfigPage.h  Page.cpp  Page.h  Scale.cpp  Scale.h  VideoViewer.cpp  VideoViewer.h  Wizard.cpp  Wizard.h
cagliostro/view/util/: AspectRatioLayout.cpp  AspectRatioLayout.h  ButtonGroup.cpp  ButtonGroup.h  Dialog.cpp  Dialog.h  DialogPage.cpp  DialogPage.h  FileSelector.cpp  FileSelector.h  VideoSurface.cpp  VideoSurface.h
resources/: example.xml  schema.xsd
scripts/: batch_subject_creation.py  extract_passwords.py  replace_all_headers.py  replace_header.py  shuffle_pages.py
translations/: cagliostro_de.ts
